--- a/index.html
+++ b/index.html
@@ -15,17 +15,35 @@
   </style>
 </head>
 <body>
-
+<main class="rating-card">
   <!-- Rating state start -->
+  <section class="rating-card__star">
+    <img src="images/icon-star.svg" alt="rating star icon">
+  </section>
+  <section class="rating-card__content">
+    <h2 class="rating-card__title">How did we do?</h2>
+    <p class="rating-card__description">
+      Please let us know how we did with your support request. All feedback is appreciated 
+      to help us improve our offering!
+    </p>
+  </section>
+  <form action="" class="rating-card__form">
+    1 2 3 4 5
+    <section class="rating-card__stars">
+      <label for="star-1">1</label>
+      <input type="radio">
+      <label for="star-2">2</label>
+      <input type="radio">
+      <label for="star-3">3</label>
+      <input type="radio">
+      <label for="star-4">4</label>
+      <input type="radio">
+      <label for="star-5">5</label>
+      <input type="radio">
+    </section>
+    <button class="btn">Submit</button>
+  </form>
 
-  How did we do?
-
-  Please let us know how we did with your support request. All feedback is appreciated 
-  to help us improve our offering!
-
-  1 2 3 4 5
-
-  Submit
 
   <!-- Rating state end -->
 
@@ -40,11 +58,12 @@
 
   <!-- Thank you state end -->
 
-  
-  <div class="attribution">
+</main>
+
+  <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </footer>
   <script src="js/app.js"></script>
 </body>
 </html>
