add active-states styles

--- a/index.html
+++ b/index.html
@@ -29,16 +29,16 @@
   </section>
   <form action="" class="rating-card__form">
     <section class="rating-card__stars">
+      <input name="star" type="radio" value="1" id="star-1">
       <label for="star-1">1</label>
-      <input type="radio">
+      <input name="star" type="radio" value="2" id="star-2">
       <label for="star-2">2</label>
-      <input type="radio">
+      <input name="star" type="radio" value="3" id="star-3">
       <label for="star-3">3</label>
-      <input type="radio">
+      <input name="star" type="radio" value="4" id="star-4">
       <label for="star-4">4</label>
-      <input type="radio">
+      <input name="star" type="radio" value="5" id="star-5">
       <label for="star-5">5</label>
-      <input type="radio">
     </section>
     <button class="btn">Submit</button>
   </form>
