--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
 
   <footer class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="#">Ahmed Asiri</a>.
   </footer>
   <script src="js/app.js"></script>
 </body>
