--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 </head>
 <body>
   <main class="container">
+    <h1 class="header">interactive rating component</h1>
     <section class="rating-card">
       <!-- Rating state start -->
       <section class="rating-card__star">
